# asari

./: Main.hs  asari.cabal
examples/: a.asari  app.asari  bug.asari  enum.asari  enum2.asari  fix.asari  hello.asari  list.asari  mulit.asari  poly-occ.asari  struct.asari  switch.asari  union.asari
src/: Error.hs  Exp.hs  FA.hs  Head.hs  Infer.hs  Lex.x  Main.hs  Name.hs  Parse.y  Ref.hs  Set.hs  Shallow.hs  State.hs  Supply.hs  Token.hs  Type.hs  Unify.hs
src/Map/: Lazy.hs
test/: hello.asari
