cabal-version:      2.4
name:               asari
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

author: Andy Sonnenburg

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

executable asari
    main-is: Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
      Error
      Exp
      FA
      Head
      Infer
      Lex
      Map.Lazy
      Name
      Parse
      Ref
      Set
      State
      Supply
      Token
      Type
      Unify

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-tools: alex, happy
    build-depends:
      base ^>=4.16.0.0,
      array,
      bytestring,
      containers,
      mtl,
      prettyprinter,
      text
    hs-source-dirs: src
    ghc-options: -Wall -Wno-name-shadowing
    default-language: Haskell2010
