cabal-version:      2.4
name:               asari
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

author: Andy Sonnenburg

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

library
  exposed-modules:
    Error
    Exp
    FA
    Head
    Infer
    Lex
    Map.Lazy
    Name
    Parse
    Ref
    Set
    State
    Supply
    Token
    Unify
  build-tool-depends: alex:alex, happy:happy
  build-depends:
    base ^>=4.16.0.0,
    array,
    bytestring,
    containers,
    mtl,
    prettyprinter,
    text
  hs-source-dirs: src
  ghc-options: -Wall -Wno-name-shadowing
  default-language: Haskell2010

executable asari-main
  main-is: Main.hs
  build-depends:
    base ^>=4.16.0.0,
    bytestring,
    asari
  hs-source-dirs: main
  ghc-options: -Wall
  default-language: Haskell2010

test-suite asari-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  ghc-options: -Wall
  build-depends:
    base ^>=4.16.0.0,
    hspec == 2.*
  default-language: Haskell2010
  build-tool-depends: hspec-discover:hspec-discover == 2.*
